cilium_netpolicy_examples/cilium57/CiliumNetworkPolicy38.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule1"
spec:
  description: "Allow HTTP GET /public from env=prod to app=service"
  endpointSelector:
    matchLabels:
      app: service
  ingress:
  - fromEndpoints:
    - matchLabels:
        env: prod
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/public"


# The following example allows GET requests to the URL /public from the endpoints with
#  the labels env=prod to endpoints with the labels app=service, but requests to any other URL, 
#  or using another method, will be rejected. Requests on ports other than port 80 will be dropped.
